card section added

--- a/index.html
+++ b/index.html
@@ -109,6 +109,50 @@
 <!-- this is Banner-Section end -->
 
 
+<!-- this is Card-Section start -->
+<section class="respScreen">
+  <div class="card-section">
+    <div class="card-div-1">
+      <div class="card-1">
+        At <span class="span-1 underline underline-offset-4">C4U</span>,
+        <br />
+        We Empower:
+      </div>
+    </div>
+
+    <div class="card-div-2">
+      <div class="card-2">
+        <img class="card-logo" src="images/Card Section/37.png" alt="" />
+        <p class="card-2-head">Students</p>
+        <p class="card-2-foot">
+          We help students find their way in a fast-evolving world by
+          creating a personalized learning journey guaranteed to help stand
+          out in a crowded job market.
+        </p>
+      </div>
+
+      <div class="card-2">
+        <img class="card-logo" src="images/Card Section/50.png" alt="" />
+        <p class="card-2-head">Universities</p>
+        <p class="card-2-foot">
+          We help your emerging talent to unlock their full potential by
+          combining education and work to create future-ready employees
+        </p>
+      </div>
+
+      <div class="card-2">
+        <img class="card-logo" src="images/Card Section/16.png" alt="" />
+        <p class="card-2-head">Businesses</p>
+        <p class="card-2-foot">
+          We enable businesses to tap into the diverse pool of emerging
+          talent cultivated by universities. To co-create the future
+          workforce and revitalize the business world.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- this is Card-Section end -->
 
 
 
